--- a/vandekar.html
+++ b/vandekar.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Statistical analysis of spatial single-cell protein data</title>
+<title>Modeling patient-level outcomes</title>
 
 <script src="site_libs/header-attrs-2.25/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -29,6 +29,9 @@
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
+<script src="site_libs/jqueryui-1.13.2/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -221,6 +224,69 @@ $(document).ready(function () {
 
 
 
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
+
+
 
 </head>
 
@@ -228,6 +294,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -291,36 +367,24 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Statistical analysis of spatial single-cell
-protein data</h1>
+<h1 class="title toc-ignore">Modeling patient-level outcomes</h1>
 
 </div>
 
 
-<p>This page contains materials for a single-cell spatial proteomics and
-multiplex imaging data workshop held on January 3, 2024 at the <a
-href="https://psb.stanford.edu/">Pacific Symposium on Biocomputing
-(PSB)</a>. For raw materials, go to the <a
-href="https://github.com/julia-wrobel/PSB_scProteomics">GitHub
-repository for this website</a>.</p>
-<p><br></p>
-<div id="authors" class="section level3">
-<h3>Authors</h3>
-<p>The following presenters contributed equally to this work:</p>
-<ul>
-<li><a href="https://lab.moffitt.org/fridley/">Brooke Fridley</a></li>
-<li><a href="https://simonvandekar.bitbucket.io/">Simon
-Vandekar</a></li>
-<li><a
-href="https://www.jefferson.edu/academics/colleges-schools-institutes/skmc/departments/pharmacology/faculty-staff/faculty/chervoneva.html">Inna
-Chervoneva</a></li>
-<li><a href="http://juliawrobel.com/">Julia Wrobel</a></li>
-<li><a href="https://syma-research.github.io/">Siyuan Ma</a></li>
-</ul>
+<div id="slide-deck" class="section level2">
+<h2>Slide Deck</h2>
+<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/3710e7390c4842afb3f85c22e729ecde" title="MI_fda" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
+</iframe>
+</div>
+<div id="code" class="section level2">
+<h2>Code</h2>
 </div>
 
 
 
+</div>
+</div>
 
 </div>
 
@@ -353,6 +417,35 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
+<script>
+$(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
