updating slides for inna, brooke, and simon

--- a/chervoneva.html
+++ b/chervoneva.html
@@ -316,7 +316,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Analysis of multiplex single-cell imaging data in R</a>
+      <a class="navbar-brand" href="index.html">Statistical analysis of spatial single-cell protein data</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -325,28 +325,25 @@ div.tocify {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Short Course
+    Workshop
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="MI_Data.html">Data Download</a>
+      <a href="fridley.html">Overview of multiplex imaging analysis techniques</a>
     </li>
     <li>
-      <a href="MI_intro.html">Background on multiplex single-cell imaging</a>
+      <a href="vandekar.html">Normalization and cell phenotyping for mIF data</a>
     </li>
     <li>
-      <a href="MI_VectraPolarisData.html">VectraPolarisData package</a>
+      <a href="chervoneva.html">Quantile index biomarkers for mIF data</a>
     </li>
     <li>
-      <a href="MI_normalization.html">Segmentation, normalization, and phenotyping</a>
+      <a href="wrobel.html">Tools and software for FDA of mIF data</a>
     </li>
     <li>
-      <a href="MI_spatialAnalysis.html">Extracting spatial summary statistics</a>
-    </li>
-    <li>
-      <a href="MI_fda.html">Modeling patient-level outcomes</a>
+      <a href="ma.html">A flexible GLM for testing cell-cell colocalization in mIF data</a>
     </li>
   </ul>
 </li>
@@ -356,7 +353,7 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="https://github.com/julia-wrobel/MI_tutorial">
+  <a href="https://github.com/julia-wrobel/PSB_scProteomics">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -378,11 +375,8 @@ single-cell multiplex immunofluorescence imaging data</h1>
 
 <div id="slide-deck" class="section level2">
 <h2>Slide Deck</h2>
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/3710e7390c4842afb3f85c22e729ecde" title="MI_fda" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
+<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/8b1b853d37dd4b6e8c9d3af52689e646" title="psb_chervoneva" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 420;" data-ratio="1.3333333333333333">
 </iframe>
-</div>
-<div id="code" class="section level2">
-<h2>Code</h2>
 </div>
 
 
