--- a/fridley.html
+++ b/fridley.html
@@ -375,11 +375,8 @@ spatial-based analysis approaches for multiplex imaging data</h1>
 
 <div id="slide-deck" class="section level2">
 <h2>Slide Deck</h2>
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/3710e7390c4842afb3f85c22e729ecde" title="MI_fda" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
+<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/578a30c025ee414883ddd36c0d0c77f1" title="psb_fridley" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" data-ratio="1.2962962962962963">
 </iframe>
-</div>
-<div id="code" class="section level2">
-<h2>Code</h2>
 </div>
 
 
