--- a/wrobel.html
+++ b/wrobel.html
@@ -375,7 +375,7 @@ analysis of multiplexed imaging data</h1>
 
 <div id="slide-deck" class="section level2">
 <h2>Slide Deck</h2>
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/3710e7390c4842afb3f85c22e729ecde" title="MI_fda" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
+<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/a4680d59269f412faa4a36619abf9644" title="psb_wrobel" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777">
 </iframe>
 </div>
 <div id="overview" class="section level2">
